src/tests/testfiles/variable-declarations/10.txt
Error at 16:5: Binary operator operands must have the same type (have char * and char rvalue)
h = 'n'; //error
^
